--- a/Aufgabe_5/Aufgabe_5.ipynb
+++ b/Aufgabe_5/Aufgabe_5.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8c6f5d93",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
    "source": [
     "try:\n",
     "    df = pd.read_excel(DATA_FILE)\n",
-    "    print(f\"Daten erfolgreich geladen. {len(df)} Datensätze gefunden.\")\n",
+    "    print(f\"Daten erfolgreich geladen: \\n{len(df)} Datensätze gefunden.\")\n",
     "except FileNotFoundError:\n",
     "    print(f\"FEHLER: Die Datei '{DATA_FILE}' wurde nicht gefunden. Bitte überprüfen Sie den Pfad.\")\n",
     "    df = None"
