--- a/Aufgabe_4/Aufgabe_4.ipynb
+++ b/Aufgabe_4/Aufgabe_4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 215,
    "id": "e50684d3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 216,
    "id": "1efa1693",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 217,
    "id": "8c6f5d93",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 218,
    "id": "354b41ac",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 219,
    "id": "64da1fce",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "Text(0, 0.5, 'Counter')"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 220,
    "id": "c5e09b41",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 221,
    "id": "12080c6f",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 222,
    "id": "c66428f1",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 223,
    "id": "2e89ac43",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 224,
    "id": "187bab52",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 225,
    "id": "39b9f82e",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "id": "64bbd70b",
    "metadata": {},
    "outputs": [
@@ -423,9 +423,12 @@
     "min_val = min(vergleich['Absatz [Einheiten]'].min(), vergleich['Vorhersage'].min())\n",
     "max_val = max(vergleich['Absatz [Einheiten]'].max(), vergleich['Vorhersage'].max())\n",
     "\n",
+    "x_values = [min_val, max_val]\n",
+    "y_values = [min_val, max_val]\n",
+    "\n",
     "# Datenpunkte\n",
     "plt.scatter('Absatz [Einheiten]', 'Vorhersage', data=vergleich)\n",
-    "plt.plot([min_val, max_val], [min_val, max_val], color='red' ,linestyle='--', label='Perfekte Vorhersage (y=x)')\n",
+    "plt.plot(x_values, y_values, color='red' ,linestyle='--', label='Perfekte Vorhersage (y=x)')\n",
     "\n",
     "plt.title('Vergleich: Reale Werte vs. Prognostizierte Werte')\n",
     "plt.xlabel('Realer Absatz')\n",
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 227,
    "id": "debc84ff",
    "metadata": {},
    "outputs": [
