--- a/Aufgabe_4/Aufgabe_4.ipynb
+++ b/Aufgabe_4/Aufgabe_4.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "id": "187bab52",
    "metadata": {},
    "outputs": [
@@ -323,8 +323,8 @@
    ],
    "source": [
     "# Gerade erstellen \n",
-    "x_values = np.array([df['Werbeausgaben [€]'].min(), df['Werbeausgaben [€]'].max()])         # Wertebereich festlegen \n",
-    "y_values = slope * x_values + intercept                                                     # Funktion erstellen \n",
+    "x_values = np.array([df['Werbeausgaben [€]'].min(), df['Werbeausgaben [€]'].max()])         # Wertebereich festlegen (x_min, x_max)\n",
+    "y_values = slope * x_values + intercept                                                     # Funktion erstellen (P_min, P_max)\n",
     "\n",
     "# Visualisierung \n",
     "plt.scatter('Werbeausgaben [€]', 'Absatz [Einheiten]', data=df, label='Tatsächlicher Absatz')       # Originaldaten\n",
