--- a/Aufgabe_4/Aufgabe_4.ipynb
+++ b/Aufgabe_4/Aufgabe_4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "id": "e50684d3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "id": "1efa1693",
    "metadata": {},
    "outputs": [],
@@ -64,12 +64,12 @@
    "id": "c7fb5d16",
    "metadata": {},
    "source": [
-    "## 1. Daten Laden "
+    "## 1. Daten laden "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 3,
    "id": "8c6f5d93",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "id": "354b41ac",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 5,
    "id": "64da1fce",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "Text(0, 0.5, 'Counter')"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 6,
    "id": "c5e09b41",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 7,
    "id": "12080c6f",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 8,
    "id": "c66428f1",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 9,
    "id": "2e89ac43",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "187bab52",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "id": "39b9f82e",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "64bbd70b",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
    "id": "a3ea63c1",
    "metadata": {},
    "source": [
-    "Die Vorhersage light mit den Echten Datenpunkten sehr gut auf einer Diagonalen."
+    "Die Vorhersage liegt mit den Echten Datenpunkten sehr gut auf einer Diagonalen."
    ]
   },
   {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 13,
    "id": "debc84ff",
    "metadata": {},
    "outputs": [
