--- a/Aufgabe_5/Aufgabe_5.ipynb
+++ b/Aufgabe_5/Aufgabe_5.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 521,
    "id": "e50684d3",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 522,
    "id": "1efa1693",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 523,
    "id": "8c6f5d93",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 524,
    "id": "12719f52",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
     "# Die ID-Variable ist die erste Spalte, \n",
     "id_vars = ['Temperatur\\nRegen']\n",
     "\n",
-    "# Temperaturwerte aud er ersten Zeile auslesen \n",
+    "# Temperaturwerte aus der ersten Zeile auslesen \n",
     "value_vars = [] \n",
     "for col in df.columns:\n",
     "    if isinstance(col, (int, float)):\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 525,
    "id": "0e70b5a4",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
    "id": "799c6015",
    "metadata": {},
    "source": [
-    "## 2 Training unb Bewertung"
+    "## 2 Training und Bewertung"
    ]
   },
   {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 526,
    "id": "c3effe91",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 527,
    "id": "5318598a",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 528,
    "id": "c35c519f",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 529,
    "id": "987770a3",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 530,
    "id": "b6cd04de",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 531,
    "id": "f0f10c2a",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 532,
    "id": "69a95049",
    "metadata": {},
    "outputs": [
@@ -506,11 +506,11 @@
       "200 neuen Wertepaaren wurde erstellt.\n",
       "Beispiel der zu prognostizierenden Daten: \n",
       "   Temperatur  Regen\n",
-      "0        13.0   23.3\n",
-      "1        19.4   12.5\n",
-      "2        20.2   24.1\n",
-      "3        16.5   16.3\n",
-      "4        26.6   11.8\n"
+      "0        26.4   18.6\n",
+      "1        10.2   28.6\n",
+      "2        32.2   16.0\n",
+      "3        21.8   28.4\n",
+      "4        18.3   29.0\n"
      ]
     }
    ],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 533,
    "id": "52ca51b7",
    "metadata": {},
    "outputs": [
@@ -543,11 +543,11 @@
      "text": [
       "Vorhersage der neuen Werte: \n",
       "   Temperatur  Regen  Vorhersage\n",
-      "0        13.0   23.3  -35.186325\n",
-      "1        19.4   12.5   -5.323050\n",
-      "2        20.2   24.1  -24.664816\n",
-      "3        16.5   16.3  -16.905972\n",
-      "4        26.6   11.8    7.871201\n"
+      "0        26.4   18.6   -4.577091\n",
+      "1        10.2   28.6  -49.276059\n",
+      "2        32.2   16.0    9.679611\n",
+      "3        21.8   28.4  -29.671795\n",
+      "4        18.3   29.0  -36.548447\n"
      ]
     }
    ],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 534,
    "id": "c14ddf5b",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 535,
    "id": "29838984",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 536,
    "id": "ad7b12c8",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 537,
    "id": "b7525d1f",
    "metadata": {},
    "outputs": [
