--- a/Aufgabe_2/Aufgabe_2.ipynb
+++ b/Aufgabe_2/Aufgabe_2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
     "FILE_NAME = \"Festlegung_Wartung_historisch.xlsx\"\n",
     "DATA_FILE = Path(DATA_FOLDER) / FILE_NAME\n",
     "\n",
-    "TARGET_COLUMN = 'Wie lange bis zur nächsten Wartung?'\n",
-    "DATE_COLUMN_TO_DROP = 'Datum der Instandhaltung'\n",
-    "CATEGORICAL_FEATURE = 'Maschine'\n",
+    "COL_TIME_TO_MAINTENANCE = 'Wie lange bis zur nächsten Wartung?'\n",
+    "COL_MAINTENANCE_DATE = 'Datum der Instandhaltung'\n",
+    "COL_MACHINE_ID = 'Maschine'\n",
     "\n",
     "TEST_SIZE = 0.2\n",
-    "RANDOM_STATE = 42 # Für reproduzierbare Ergebnisse\n",
+    "RANDOM_STATE = 42               # Für reproduzierbare Ergebnisse\n",
     "MAX_DEPTH = 3\n",
     "\n",
     "# Matplotlib-Plots direkt im Notebook anzeigen und Theme setzen\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -147,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtered = df.drop(columns=[DATE_COLUMN_TO_DROP])"
+    "df_filtered = df.drop(columns=[COL_maintenance_date])"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "957ad6bd-2cb0-45fd-944f-6639c0e6e294",
+       "ref": "5f55a3b3-0190-41ad-85ca-bb295bd4edc6",
        "rows": [
         [
          "0",
@@ -393,7 +393,7 @@
          "type": "string"
         }
        ],
-       "ref": "0eebcba3-809d-4475-a524-1554ba9334ff",
+       "ref": "8fb01432-6840-45a4-9899-434a421a2927",
        "rows": [
         [
          "0",
@@ -436,8 +436,8 @@
    ],
    "source": [
     "# Features (X) und Zielvariable (y) trennen\n",
-    "X = pd.get_dummies(df_filtered.drop(columns=[TARGET_COLUMN]), columns=[CATEGORICAL_FEATURE], drop_first=True)\n",
-    "y = df_filtered[TARGET_COLUMN]\n",
+    "X = pd.get_dummies(df_filtered.drop(columns=[COL_time_to_maintenance]), columns=[COL_machine_id], drop_first=True)\n",
+    "y = df_filtered[COL_time_to_maintenance]\n",
     "\n",
     "# Eindeutige Klassennamen für spätere Visualisierungen speichern\n",
     "class_names = sorted(y.unique())\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "404aecf1-2bcc-4272-8733-8edb67cc8d2e",
+       "ref": "4e52a136-478c-461a-800d-69c5ab4eb0e7",
        "rows": [
         [
          "0",
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
